# orderbook-alpha-engine

./: .gitignore  CMakeLists.txt  README.md  alpha_stream.csv  run_engine.py
data/: market_data.csv  sample_modify_cancel.csv
datasets/: test1.csv  test2.csv  test3.csv  test4.csv
include/alpha/: DepthImbalance.hpp  OrderBookImbalance.hpp  OrderBookImbalanceCalculator.hpp  SpreadDynamics.hpp
include/backtest/: BacktestDriver.hpp  BacktestReport.hpp  MetricsCollector.hpp  OrderBookConsumer.hpp
include/consumers/: OrderBookImbalanceConsumer.hpp
include/feed/: FeedHandler.hpp
include/orderbook/: EventType.hpp  OrderBook.hpp  OrderBookSide.hpp  OrderEvent.hpp  PriceLevel.hpp
include/replay/: DeterministicReplayEngine.hpp  IEventConsumer.hpp  IEventSource.hpp  TimeOrderedEventSource.hpp
src/: main.cpp
src/backtest/: BacktestDriver.cpp  BacktestReport.cpp  MetricsCollector.cpp  OrderBookConsumer.cpp
src/replay/: DeterministicReplayEngine.cpp  TimeOrderedEventSource.cpp
ui/backend/: app.py  market_events.csv  market_events_sample.csv
ui/backend/static/: app.js
ui/backend/templates/: index.html
ui/backend/ui/backend/: app.py
ui/backend/ui/backend/templates/: index.html
